# snipt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  publish.sh
.github/: RELEASE.md  cliff.toml
.github/workflows/: build.yml  release.yml
crates/scribe-cli/: Cargo.toml  README.md
crates/scribe-cli/src/: cli.rs  commands.rs  main.rs  utils.rs
crates/scribe-core/: Cargo.toml
crates/scribe-core/src/: config.rs  error.rs  lib.rs  storage.rs
crates/scribe-daemon/: Cargo.toml
crates/scribe-daemon/src/: daemon.rs  daemon_manager.rs  keyboard_listener.rs  lib.rs  permissions.rs  process.rs
crates/scribe-server/: API.md  Cargo.toml
crates/scribe-server/src/: api.rs  lib.rs  server.rs
crates/scribe-server/src/api/: endpoints.rs
crates/scribe-server/src/server/: http_server.rs  mod.rs  utils.rs
crates/scribe-ui/: Cargo.toml
crates/scribe-ui/src/: common.rs  dashboard.rs  interactive.rs  lib.rs  snippet_manager.rs  ui.rs
crates/snipt/: Cargo.toml  README.md
crates/snipt-cli/: Cargo.toml  README.md
crates/snipt-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  utils.rs
crates/snipt-core/: Cargo.toml  README.md
crates/snipt-core/src/: clipboard.rs  config.rs  error.rs  execution.rs  expansion.rs  keyboard.rs  lib.rs  storage.rs
crates/snipt-daemon/: Cargo.toml  README.md
crates/snipt-daemon/src/: daemon.rs  daemon_manager.rs  keyboard_listener.rs  permissions.rs  process.rs
crates/snipt-server/: API.md  Cargo.toml  README.md
crates/snipt-server/src/api/: endpoints.rs  mod.rs  models.rs
crates/snipt-server/src/server/: http_server.rs  utils.rs
crates/snipt-ui/: Cargo.toml  README.md
crates/snipt-ui/src/: common.rs  dashboard.rs  editor.rs  lib.rs  snippet_manager.rs
crates/snipt/src/: main.rs
examples/: code-snippets.md  markdown-templates.md  parameterized-shortcuts.md  project-documentation.md  script-execution.md  text-transformations.md  url-commands.md
frontend-2/: .gitignore  electron-builder.yml  index.html  main.js  package-lock.json  package.json  preload.js  webpack.config.js
frontend-2/src/main/: menu.js  shortcuts.js  spotlightWindow.js
frontend-2/src/main/ipc/: handlers.js
frontend-2/src/renderer/: App.js  index.js
frontend-2/src/renderer/components/ActivityFeed/: ActivityFeed.css  ActivityFeed.jsx
frontend-2/src/renderer/components/Navbar/: Navbar.css  Navbar.jsx
frontend-2/src/renderer/components/RecentlyAccessed/: RecentlyAccessed.css  RecentlyAccessed.jsx
frontend-2/src/renderer/components/SearchBar/: SearchBar.css  SearchBar.jsx
frontend-2/src/renderer/pages/Home/: Home.jsx
frontend-2/src/renderer/styles/: global.css
frontend-2/src/renderer/utils/: api.js
src/: api.rs  config.rs  daemon.rs  error.rs  expansion.rs  interactive.rs  keyboard.rs  lib.rs  main.rs  models.rs  scribe.rs  scribe_data.rs  server.rs  storage.rs  ui.rs
