[workspace]
resolver = "2"
members = [
    "crates/snipt",
    "crates/snipt-cli",
    "crates/snipt-core",
    "crates/snipt-server",
    "crates/snipt-ui",
    "crates/snipt-daemon",
]

[workspace.dependencies]
# Shared dependencies
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = "0.23"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3"
rdev = "0.5"
enigo = "0.3.0"
arboard = "3.2.0"
thiserror = "1.0"
