[package]
name = "scribe-cli"
version = "0.1.0"
edition = "2021"

# This crate produces the main binary
[[bin]]
name = "scribe"
path = "src/main.rs"

[dependencies]
scribe-core = { path = "../scribe-core" }
scribe-server = { path = "../scribe-server" }
scribe-ui = { path = "../scribe-ui" }
scribe-daemon = { path = "../scribe-daemon" }
clap = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
