[package]
name = "snipt-cli"
version = "0.1.1"
edition = "2021"
authors = ["bahdotsh"]
description = "Command-line interface for the Snipt application"
license = "MIT"
repository = "https://github.com/snipt/snipt"
keywords = ["cli", "clipboard", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]

# This crate produces the main binary
[[bin]]
name = "snipt-cli"
path = "src/main.rs"

# Add a lib target so other crates can depend on it
[lib]
name = "snipt_cli"
path = "src/lib.rs"

[dependencies]
snipt-core = { version = "0.1.0", path = "../snipt-core" }
snipt-server = { version = "0.1.0", path = "../snipt-server" }
snipt-ui = { version = "0.1.0", path = "../snipt-ui" }
snipt-daemon = { version = "0.1.0", path = "../snipt-daemon" }
clap = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
