[package]
name = "snipt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
rdev = "0.5.3"
enigo = "0.3.0"
thiserror = { workspace = true }
arboard = "3.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
