[package]
name = "snipt-core"
version = "0.1.1"
edition = "2021"
authors = ["bahdotsh"]
description = "Core functionality for the Snipt application"
license = "MIT"
repository = "https://github.com/snipt/snipt"
keywords = ["clipboard", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tempfile = "3.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
rdev = { workspace = true }
enigo = { workspace = true }
thiserror = { workspace = true }
arboard = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
