[package]
name = "snipt-daemon"
version = "0.1.1"
edition = "2021"
authors = ["bahdotsh"]
description = "Background daemon for the Snipt application"
license = "MIT"
repository = "https://github.com/snipt/snipt"
keywords = ["daemon", "clipboard", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
snipt-core = { version = "0.1.1", path = "../snipt-core" }
snipt-server = { version = "0.1.0", path = "../snipt-server" }
rdev = { workspace = true }
whoami = "1.5.1"
