[package]
name = "snipt-server"
version = "0.1.0"
edition = "2021"
authors = ["bahdotsh"]
description = "Server component for the Snipt application"
license = "MIT"
repository = "https://github.com/bahdotsh/snipt"
keywords = ["server", "clipboard", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
snipt-core = { path = "../snipt-core" }
serde = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
