[package]
name = "snipt-ui"
version = "0.1.0"
edition = "2021"
authors = ["bahdotsh"]
description = "User interface components for the Snipt application"
license = "MIT"
repository = "https://github.com/snipt/snipt"
keywords = ["ui", "tui", "clipboard", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
snipt-core = { version = "0.1.0", path = "../snipt-core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
arboard = { workspace = true }
